--- a/WebContent/Login.xhtml
+++ b/WebContent/Login.xhtml
@@ -18,7 +18,8 @@
     	</h:head>
 
 <div class="loginbox" style="margin-top:200px">
-    <h:form id="loginform" style="height:231px;width:550px">
+    <h:form id="loginform" style="height:260px;width:550px">
+    	<h:messages id="temp" style = "color:red;margin:8px;" />
 		<div class="container" style="height:231px;width:550px">        
 		  <table class="table table-hover">
 		    <thead bgcolor="#50A7E6">
@@ -34,21 +35,24 @@
 			<td>
 		      <div class="input-group" style="padding-left:50px;">
 		        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-		        <h:inputText id="username" value="#{LoginBean.username}" type="text" class="form-control" name="username" a:placeholder="username"></h:inputText>
+		        <h:inputText id="username" value="#{LoginBean.username}" type="text" class="form-control" required="true" requiredMessage="Username must not be empty" name="username" a:placeholder="username"></h:inputText>
 		      </div></td>
+		      <td><h:message for="username" style="color:red" /></td>
 		      </tr>
 		      <tr>
 		        <td></td>
 		        <td>      
 		        <div class="input-group" style="padding-left:50px;">
 		        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-		        <h:inputSecret id="password" value="#{LoginBean.password}" type="password" class="form-control" name="password" a:placeholder="password"></h:inputSecret>
+		        <h:inputSecret id="password" value="#{LoginBean.password}" type="password" required="true" requiredMessage="Password must not be empty" class="form-control" name="password" a:placeholder="password"></h:inputSecret>
+		        <td><h:message for="username" style="color:red" /></td>
 		      </div>
 		      </td>
 		      </tr>
 		      <tr>
 				<th></th>
-				<td style="padding-left:180px;"><h:commandButton value="Submit" action="#{LoginBean.ValidateUser}" class="btn btn-success"></h:commandButton></td>
+				<td style="padding-left:180px;"><h:commandButton id="Submit" value="Submit"  requiredMessage="Invalid Login Credentials." action="#{LoginBean.checkLogin}" class="btn btn-success"></h:commandButton></td>
+				<h:message for="Submit" styleClass="error" style="color:red"></h:message><br></br>
 			  </tr>
 			  <tr>
 			  <td></td>
@@ -57,6 +61,7 @@
 		    </tbody>
 		  </table>
 	</div>
+	
     </h:form>
     <br></br>
 
